# PatchMeshToBrushes

./: .gitignore  AGENTS.md  CMakeLists.txt  CREDITS.md  README.md
.github/workflows/: release.yml  verify.yml
benchmarks/: benchmark_large_map.cpp
cmake/: MeshToBrushesVersion.hpp.in  PatchMeshToBrushesVersion.hpp.in
docs/: ARCHITECTURE.md  BRUSH_CONSTRUCTION.md  MAP_FORMAT.md  PROJECT_PLAN.md  ROADMAP.md
docs/dev/: ARCHITECTURE.md  BRUSH_CONSTRUCTION.md  HARDENING.md  MAP_FORMAT.md  PROJECT_PLAN.md  RELEASES.md  ROADMAP.md
examples/: simple_patch.map
src/: main.cpp
src/cli/: Arguments.cpp  Arguments.hpp
src/conversion/: BrushBuilder.cpp  BrushBuilder.hpp  BrushPlanner.cpp  BrushPlanner.hpp  ConversionPlanner.cpp  ConversionPlanner.hpp  ConversionSettings.hpp  PatchTopology.cpp  PatchTopology.hpp
src/geometry/: BezierPatch.cpp  BezierPatch.hpp  Plane.hpp  PlaneFit.cpp  PlaneFit.hpp  UvProjection.cpp  UvProjection.hpp  Vec.hpp  Winding.cpp  Winding.hpp
src/io/: FileSystem.cpp  FileSystem.hpp
src/map/: MapDocument.cpp  MapDocument.hpp
tests/: test_arguments.cpp  test_brush_builder.cpp  test_brush_planner.cpp  test_deterministic_output.cpp  test_geometry_core.cpp  test_golden_conversion.cpp  test_malformed_fuzz.cpp  test_map_parser.cpp  test_patch_scanner.cpp  test_patch_topology.cpp  test_q3dm1_conversion.cpp  test_q3dm1_fixture.cpp
tests/golden/: planar_patch_input.map  planar_patch_preserve_expected.map  planar_patch_replace_expected.map  planar_patch_report_expected.md
tools/: package_release.py  render_readme_html.py  version.py
